remove deprecated features