@@ -186,8 +186,14 @@ tasks.withType(Test).configureEach {
     list.add("java.se")
     list.add("--add-exports")
     list.add("java.base/jdk.internal.ref=ALL-UNNAMED")
+    list.add("--add-exports")
+    list.add("java.xml.crypto/org.jcp.xml.dsig.internal.dom=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/java.lang=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.util=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.time=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/java.nio=ALL-UNNAMED")
     list.add("--add-opens")
